# minimind

./: .gitattributes  .gitignore  .readthedocs.yaml  0-eval_pretrain.py  1-pretrain.py  2-eval.py  2-eval_chat.py  3-full_sft.py  4-lora_sft.py  5-dpo_train.py  AGENTS.md  COURSE.md  README.md  README_en.md  README_web.md  REGRESSION_CHECKS.md  RESOURCES.md  chat_openai_api.py  data_process.py  eval_ceval.py  eval_llm.py  eval_model.py  export_model.py  fast_infenence.py  fast_inference.py  index.html  mem_utils.py  mkdocs.yml  model_chat.py  my_openai_api.py  process.ipynb  pyproject.toml  requirements.txt  test.py  train_cispo.py  train_dapo.py  train_distill_reason.py  train_distillation.py  train_dpo.py  train_full_sft.py  (+6 more)
agentic/: __init__.py  data_analysis_env.py
ceval/: eval.md
code_agent/: __init__.py  agent.py  backends.py  dataset.py  evaluation.py  reward.py  verifier.py
configs/: search_shortqa_sources.json  searchlm_profiles.json
course/: 00_syllabus.md  01_project_overview.md  02_environment_and_resources.md  03_cli_inference.md  04_tokenizer_and_special_tokens.md  05_sft_dataset_and_labels.md  06_pretrain_vs_sft.md  07_pretrain_training_entry.md  08_minimind_config_and_params.md  09_embedding_norm_residual_block.md  10_causal_lm_forward_and_loss_shift.md  11_attention_principles_and_source.md  12_rope_and_kv_cache.md  13_ffn_and_moe.md  14_lr_grad_accum_amp.md  15_checkpoint_resume.md  16_full_sft_training_overview.md  17_pretrain_to_full_sft.md  18_lora_principles_and_implementation.md  19_lora_training_flow.md  20_distillation_training_flow.md  (+9 more)
(+359 files in other folders)
